kustomization/components/networkpolicy-allow-forgejo-workflow-job-to-traefik-ci/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-forgejo-workflow-job-to-traefik-ci-networkpolicy
spec:
  egress:
    - ports:
        - port: websecure-ci
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
    - ports:
        - port: 443
      to:
        - ipBlock:
            cidr: 172.17.255.250/32
  podSelector:
    matchLabels:
      app.kubernetes.io/component: workflow-job
  policyTypes:
    - Egress
